# Example

add_subdirectory(ex_examples)
add_subdirectory(constructor)
add_subdirectory(polymorphism)
add_subdirectory(testCache)
add_subdirectory(operatorReload)
add_subdirectory(enum_class)
add_subdirectory(structFunction)
add_subdirectory(tempCourse)
add_subdirectory(predicate)
add_subdirectory(stlAlgorithm)
add_subdirectory(reloadOperator)
add_subdirectory(setUsage)
